<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/testbackground"
    android:layoutDirection="locale"
    >
    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10sp"
        android:text="Green Guardian"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textColor="@color/Title_colour"
        android:paddingTop="50dp"
        />
    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:textSize="45dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="440dp"/>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/SignIn"
        android:contentDescription="@string/SignInButton"
        android:textColor="@color/SecondaryColour"
        android:background="@drawable/welcomepage_button_outline2"
        app:layout_constraintTop_toBottomOf="@id/welcomeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/SignUp"
        android:contentDescription="@string/SignUpButton"
        android:textColor="@color/SecondaryColour"
        android:background="@drawable/welcomepage_button_outline"
        app:layout_constraintTop_toBottomOf="@id/signInButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
