<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profilebackground"
    android:layoutDirection="locale"
    tools:context=".InformationPage">
    <include layout="@layout/navbarmain" />





    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10sp"
        android:text="Green Guardian"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textColor="@color/Title_colour"
        />

    <View
        android:id="@+id/InfoPageView"
        android:layout_width="300sp"
        android:layout_height="550sp"
        android:layout_marginTop="24dp"
        android:background="@drawable/textview_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <TextView
        android:id="@+id/InformationTitle"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/InfoPageView"
        app:layout_constraintStart_toStartOf="@id/InfoPageView"
        app:layout_constraintEnd_toEndOf="@id/InfoPageView"
        android:text="@string/InfoTitle"
        android:textSize="26sp"
        android:gravity="center"
        android:layout_marginTop="5sp"
        android:textColor="@color/Title_colour"
        />

    <TextView
        android:id="@+id/info1"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/InformationTitle"
        app:layout_constraintStart_toStartOf="@+id/InfoPageView"
        android:text="@string/InfoText1"
        android:contentDescription="@string/InfoText1"
        android:textSize="16sp"
        android:padding="15sp"
        />
    <TextView
        android:id="@+id/info2"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/info1"
        app:layout_constraintStart_toStartOf="@+id/InfoPageView"
        android:text="@string/InfoText2"
        android:contentDescription="@string/InfoText2"
        android:textSize="16sp"
        android:padding="15sp"
        />
    <TextView
        android:id="@+id/info3"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/info2"
        app:layout_constraintStart_toStartOf="@+id/InfoPageView"
        android:text="@string/InfoText3"
        android:contentDescription="@string/InfoText3"
        android:textSize="16sp"
        android:padding="15sp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>